# moodle-student-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/moodle_mcp/: __init__.py  client.py  config.py  main.py  tools.py
