[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-mcp-server"
version = "0.1.0"
description = "MCP server for Moodle LMS – tools for site info, courses, contents, and assignments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ilia Grigorev" }]
keywords = ["mcp", "moodle", "lms", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "mcp[cli]>=1.0,<2",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = []

[project.urls]
Repository = "https://github.com/Ilya-Grigoryev/moodle-student-mcp"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
moodle-mcp = "moodle_mcp.main:main"
